# airday

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  bun.lock.legacy  data-model.md  e2e.sh  index.html  kill-serverd.sh  package-lock.json  package.json  phoenix.md  pnpm-lock.yaml  pnpm-workspace.yaml  prep.sh  readme.md  roadmap.md  serverd.sh  skaffold.md  sync-engine-slice-4.md  sync-engine.md  test.sh  vite.config.js
.github/workflows/: deploy.yml  release.yml
.zed/: settings.json
api/: package.json  readme.md
apple/: README.md  build-xcframework.sh
apple/AirdayCore/: Package.swift
cli/: Cargo.toml
cli/migrations/: 001_init.sql  002_local_storage.sql
cli/src/: config.rs  db.rs  keystore.rs  lib.rs  main.rs  net.rs  storage.rs  sync.rs
cli/src/commands/: bin.rs  cache.rs  export.rs  focus.rs  items.rs  lists.rs  login.rs  logout.rs  mod.rs  password.rs  recover.rs  resolve.rs  signup.rs  status.rs  sync.rs
cli/tests/: auth_flows.rs  integration_snapshots.rs  sync_smoke.rs
cli/tests/support/: mod.rs
core/: Cargo.toml
core/ffi/: Cargo.toml
core/ffi/src/: lib.rs
core/src/: doc.rs  events.rs  lib.rs  storage.rs  sync.rs
core/src/crypto/: aead.rs  kdf.rs  mod.rs  recovery.rs  secrets.rs
core/tests/: order_schema.rs  reorder_regressions.rs
core/web/: Cargo.toml
core/web/src/: lib.rs
crates/protocol/: Cargo.toml
crates/storage-sqlite/: Cargo.toml
crates/storage-sqlite/migrations/: 001_init.sql
crates/storage-sqlite/src/: lib.rs
crdt-playground/: readme.md
deploy/: Dockerfile  README.md  bootstrap.sh  ci.sh
deploy/systemd/: airday.service  caddy.service
flatbuffers/: airday.fbs  airday_proto.fbs  common.fbs  compile.sh  proto.fbs  readme.md
flatbuffers-legacy/: airday_custom_legacy.fbs  compile.sh  readme.md  sync.fbs
ios/: .gitignore  readme.md
ios-legacy/: readme.md
js-legacy/cal/: vite.build.ts
js-legacy/core/: package.json  readme.md  tsconfig.build.json  tsconfig.json
js-legacy/list/: vite.build.ts
js/cal/: package.json  readme.md  vite.build.ts
js/config/: .env.deploy.example  .env.dev.example  README.md  gen-config.ts  package.json  tsconfig.json
js/core/: bundle.ts  config.toml  global-setup.ts  package.json  playwright.config.ts  playwright.html  readme.md  test-harness.html  test.html  tsconfig.json
js/list/: readme.md
js/tracer/: bundle.ts  package.json
js/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
loro-bug/: Cargo.toml  README.md
loro-bug/src/: main.rs
migrations/: 000_dev.sql
notes/: maintaining-sort-order.md  multi-platform-strategy.md
pkg_js/cal/: package.json
pkg_js/keyboard/: package.json
pkg_js/list/: readme.md
pkg_js/tracer/: bundle.ts
pkg_rust/crdt/: Cargo.toml
plans/: wasm-plan.md
rust/core/: Cargo.toml  readme.md
rust/sync-types/: Cargo.toml  readme.md
rust/sync_macros/: Cargo.toml
rust/types/: Cargo.toml  readme.md
scripts/: wipe-db.sh  wipe.sh
server/: Cargo.toml  build.rs  config.toml  package.json  readme.md  roadmap.md
server-legacy/: .gitignore  Cargo.toml
server-legacy/src/: main.rs  test_util.rs
server/config_templates/: config.toml
server/migrations/: 000_dev.sql  001_init.sql  002_blob_id_rename.sql
server/src/: auth.rs  build_info.rs  config.rs  core.rs  db.rs  error.rs  http_root.rs  jmap_core.rs  lib.rs  main.rs  server.rs  server.ts  sql.rs  state.rs  test_util.rs
server/src/auth/: auth.rs  cache.rs  cookie.rs  meta.rs  middleware.rs  mod.rs  paseto.rs  queries.rs  session.rs  sqlite.rs  tokens.rs
server/src/cal/: attributes.rs
server/src/common/: config.rs  error.rs  json.rs  mod.rs  sql.rs  utils.rs
server/src/crdt/: lww.rs
server/src/http/: admin_routes.rs  auth_routes.rs  device_routes.rs  mod.rs  msgpack.rs  request_id.rs  web.rs
server/src/item/: model.rs  postgres-adapter.md  sqlite.rs
server/src/jmap/: core.rs
server/src/model/: auth.rs  item.rs  mod.rs  session.rs  user.rs  workspace.rs
server/src/sync/: .gitignore  airday.rs  auth.rs  batch_response.rs  engine.rs  fb.rs  mod.rs  outgoing.rs  queries.rs  readme.md  response.rs  sessions.rs  snapshot.rs  snapshot_2.rs  sqlite.rs  stream.rs  sync.rs  websocket.rs  ws.rs
server/src/sync_engine/: any.rs  container.rs  engine.rs  fb.rs  item.rs  readme.md  sqlite.rs  sync.rs  websocket.rs
server/src/sync_engine_old/: model.rs  sqlite.rs  types.rs
server/src/sync_object/: attributes.rs  item.rs  model.rs  sqlite.rs  types.rs
server/src/sync_object_v2/: v2.rs
server/src/sync_transport/: fb.rs  response.rs  sync.rs  websocket.rs
server/src/telemetry/: otlp.rs  readme.md
server/src/user/: model.rs  sqlite.rs
server/src/workspace/: model.rs  sqlite.rs
server/tests/: admin.rs  auth.rs  sync.rs
spec/: admin.md  architecture.md  auth.md  board.md  cli.md  crypto.md  data-model.md  encryption.md  focus-plan.md  focus.md  idb-wal.md  kanban.md  known-issues.md  leader-follower.md  list-perf-plan.md  local-storage-plan.md  local-storage.md  multi-tab.md  perf-limits.md  pwa-plan.md  saas.md  search.md  shared-worker.md  sharing-plan.md  sharing.md  storage.md  swift-ffi-plan.md  sync-protocol.md  testing.md
sqlite/: lww-plan.md  readme.md
sqlite-ext/: .sqliterc  readme.md
sqlite/migrations/: 000_dev.sql
sqlite_ext/: readme.md
src/: acme.d.ts  app.module.css  app.tsx  header.tsx  keyboard.ts  main.css  main.tsx  view-state.ts  view.tsx
src/bar/: bar.module.css  bar.tsx
src/context-menu/: context-menu.tsx
src/item/: item.module.css  item.tsx  placeholder.tsx  utils.ts
src/list/: check.module.css  checkbox.tsx  done.tsx  drag-stack.tsx  item.tsx  keyboard-handler.ts  list-header.module.css  list-header.tsx  list-icon.tsx  list-title.tsx  list.module.css  list.tsx  phantom-stack.tsx  (+4 more)
src/list-item/: item.module.css  item.tsx  placeholder.tsx
tauri/: readme.md
telemetry/: jaeger-config.yaml  jaeger.sh  readme.md  tracing-rust-notes.md
web/: .gitignore  index.html  package.json  vite.config.js.timestamp-1740176998176-f7d40956cc83b.mjs
web-legacy/: package.json  vite.config.js
(+462 files in other folders)
