[workspace]
resolver = "3"
members = [
    "crates/protocol",
    "core",
    "core/web",
    "server",
    "cli",
]
default-members = ["server", "cli"]

[workspace.package]
edition = "2024"
version = "0.0.1-alpha.5"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# protocol / serialization
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
rmp-serde = "1"
toml = "0.8"

# async runtime + http
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# storage
rusqlite = { version = "0.32", features = ["bundled", "blob"] }
tokio-rusqlite = "0.6"

# crypto
argon2 = "0.5"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
zeroize = { version = "1", features = ["derive"] }

# utils
uuid = { version = "1", features = ["v4", "v7", "serde"] }
bip39 = "2"
clap = { version = "4", features = ["derive"] }
dirs = "6"
dialoguer = "0.11"
hex = "0.4"
thiserror = "1"
anyhow = "1"
bytes = "1"
loro = "1.10"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
