[package]
name = "airday"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "airday"
path = "src/main.rs"

[dependencies]
airday-protocol = { path = "../crates/protocol" }
airday-core = { path = "../core" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
rmp-serde = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }
serde_json = "1"
gethostname = "0.5"
