[package]
name = "airday-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
airday-protocol = { path = "../crates/protocol" }
serde = { workspace = true }
serde_bytes = { workspace = true }
rmp-serde = { workspace = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
bip39 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
loro = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
