[package]
name = "airday-server"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "airday-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
# Bake the built web client (js/web/dist) into the server binary and serve it
# from `/`, `/index.html`, and `/assets/*`. Run the vite build (`cd js/web &&
# bun run build`) before compiling with this feature: the bundle is embedded at
# compile time, so a missing dist/ is a build error.
bundled-web = ["dep:rust-embed"]

[dependencies]
airday-protocol = { path = "../crates/protocol" }
airday-core = { path = "../core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
rmp-serde = { workspace = true }
toml = { workspace = true }
rusqlite = { workspace = true }
tokio-rusqlite = { workspace = true }
sha2 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
# `debug-embed` so the bundle is embedded in debug builds too — "bundled" means
# bundled, not silently read from disk. `mime-guess` powers `metadata.mimetype()`.
rust-embed = { version = "8", optional = true, features = [
    "mime-guess",            # metadata.mimetype()
    "debug-embed",           # embed in debug builds too, not just release
    "interpolate-folder-path", # expand $CARGO_MANIFEST_DIR in #[folder]
] }

[dev-dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
tokio-tungstenite = "0.24"
http = "1"
futures-util = "0.3"
