[package]
name = "airday-storage-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "airday_storage_sqlite"
path = "src/lib.rs"

[dependencies]
airday-core = { path = "../../core" }
airday-protocol = { path = "../protocol" }
rusqlite = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
